--- a/frontend/src/styles/common.sass
+++ b/frontend/src/styles/common.sass
@@ -5,3 +5,6 @@ body
   background: #121421
   font-family: "Custom Open Sans", sans-serif
   font-size: 100%
+
+h1, h2, h3, h4, h5, h6, p, span
+  color: white
